--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,9 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/icons": "^4.11.2",
-    "@mui/icons-material": "^5.3.1",
+    "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.0",
+    "@mui/styles": "^5.4.4",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
